# rust_CLI_encryption

./: Cargo.toml  README.md  key  users.json
src/: main.rs
src/lib/: decryption.rs  encryption.rs  key.rs  mod.rs  util.rs
