[package]
name = "hugobyte_encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
serde_json = "1.0.96"
clap = { version = "3.2.22", features = ["derive", "cargo"] }
rand = "0.8.5"
aes = "0.7.4"
block-modes = "0.8.1"
base64 = "0.13.0"
serde = "1.0.85"
serde_derive = "1.0.85"